--- a/id/evogun/index.html
+++ b/id/evogun/index.html
@@ -28,5 +28,6 @@
      emailjs.init('user_Uo3DWO4lfQjwUkIRdJDxU');
 })();
 </script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 </body>
 </html>
