--- a/id/evogun/index.html
+++ b/id/evogun/index.html
@@ -14,15 +14,17 @@
 </center>
 <center>
 <img width="200" height="100" src="akdraco.png">
-<center><button onclick="login()">CLAIM</button></center>
+<center><button onclick="login()">KLAIM</button></center>
 <img width="200" height="100" src="mp40cobra.jpg">
-<center><button onclick="login()">CLAIM</button></center>
+<center><button onclick="login()">KLAIM</button></center>
 <img width="200" height="100" src="sgEvo.jpg">
-<center><button onclick="login()">CLAIM</button></center>
+<center><button onclick="login()">KLAIM</button></center>
 <img width="200" height="140" src="xm8Evo.jpg">
-<center><button onclick="login()">CLAIM</button></center>
+<center><button onclick="login()">KLAIM</button></center>
 <img width="200" height="100" src="umpEvo.jpg">
-<center><button onclick="login()">CLAIM</button></center>
+<center><button onclick="login()">KLAIM</button></center>
+<img width="200" height="100" src="lodon.jpg">
+<center><button onclick="login()">KLAIM</button></center>
 </center>
 <center>
 <script>
